WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145614
Viewport unit values affected by Command-+ zoom
https://bugs.webkit.org/show_bug.cgi?id=145614
Summary
Viewport unit values affected by Command-+ zoom
Joey Hoer
Reported
2015-06-03 13:32:16 PDT
Created
attachment 254203
[details]
Rendering comparison between browsers When the browser zoom is zoomed (in or out), viewport unit values are affected, and are no longer relative to the physical viewport. This can lead to layout issues. This behaves as expected in Chrome and Firefox. See
http://codepen.io/joeyhoer/full/BcbsH/
for a demo.
Attachments
Rendering comparison between browsers
(2.36 MB, image/png)
2015-06-03 13:32 PDT
,
Joey Hoer
no flags
Details
Patch
(8.17 KB, patch)
2017-11-28 21:32 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-elcapitan
(2.22 MB, application/zip)
2017-11-28 22:28 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-elcapitan-wk2
(2.61 MB, application/zip)
2017-11-28 22:40 PST
,
EWS Watchlist
no flags
Details
Patch
(7.65 KB, patch)
2017-11-28 22:42 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-08-11 14:04:56 PDT
Does this still reproduce in a WebKit nightly?
Joey Hoer
Comment 2
2015-08-11 14:28:22 PDT
Yes this issue is still present in WebKit
r188253
(In reply to
comment #1
)
> Does this still reproduce in a WebKit nightly?
Simon Fraser (smfr)
Comment 3
2015-08-11 14:47:28 PDT
I cannot reproduce. By "browser zoom" do you mean pinch-zoom on the trackpad?
hexalys
Comment 4
2015-08-11 16:15:38 PDT
http://codepen.io/hexalys/full/XbGvvW(In
reply to
comment #3
)
> I cannot reproduce. By "browser zoom" do you mean pinch-zoom on the trackpad?
Joey's example is is not very clear. Here is simple layout with VW units.
http://codepen.io/hexalys/full/XbGvvW
As you zoom in with CMD +, you can see that the VM units remains based on a 100% zoom. e.g. 50% of the viewport width become 75% at 150% zoom etc.. Other browsers will adjust VW units to the rescaled viewport width according to the zoom ratio. Without that adjustment, all responsive layouts will be affected.
Marcus Zanona
Comment 5
2016-04-22 06:27:50 PDT
I can confirm the unexpected behaviour:
http://data:text/html
,<div%20style="width:100vw;height:100vh;background:red"> an object with width of 100vw and height of 100vh has it's dimensions changed when zooming in or out the page which is not the expected behaviour. Firefox seems to implement this accordingly.
Radar WebKit Bug Importer
Comment 6
2016-04-22 10:53:24 PDT
<
rdar://problem/25880356
>
alicia.gonzalez.90
Comment 7
2017-07-27 04:50:24 PDT
Is there a timeline to fix this issue? :)
Asher
Comment 8
2017-08-29 15:58:02 PDT
Seriously, why isn't this solved yet? It seems a basic premise of viewport-based design, so why is it not being taken seriously after more than 2 full years?
Simon Fraser (smfr)
Comment 9
2017-11-28 21:32:21 PST
Created
attachment 327827
[details]
Patch
EWS Watchlist
Comment 10
2017-11-28 22:28:30 PST
Comment hidden (obsolete)
Comment on
attachment 327827
[details]
Patch
Attachment 327827
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5398762
New failing tests: fast/css/viewport-units-zoom.html
EWS Watchlist
Comment 11
2017-11-28 22:28:31 PST
Comment hidden (obsolete)
Created
attachment 327829
[details]
Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 12
2017-11-28 22:40:22 PST
Comment hidden (obsolete)
Comment on
attachment 327827
[details]
Patch
Attachment 327827
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5398789
New failing tests: fast/css/viewport-units-zoom.html
EWS Watchlist
Comment 13
2017-11-28 22:40:23 PST
Comment hidden (obsolete)
Created
attachment 327835
[details]
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 14
2017-11-28 22:42:32 PST
Created
attachment 327836
[details]
Patch
WebKit Commit Bot
Comment 15
2017-11-29 10:59:42 PST
Comment on
attachment 327836
[details]
Patch Clearing flags on attachment: 327836 Committed
r225277
: <
https://trac.webkit.org/changeset/225277
>
WebKit Commit Bot
Comment 16
2017-11-29 10:59:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug