Viewport unit values affected by Comand-+ zoom https://bugs.webkit.org/show_bug.cgi?id=145614

Reviewed by Zalan Bujtas.
Source/WebCore:

Don't apply zooming when resolving viewport-relative lengths, since they should not
change based on the zoom level.

Test: fast/css/viewport-units-zoom.html

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::computeNonCalcLengthDouble):

Tools:

Fix Command+ and Command- in MiniBrowser to do zooming, rather than being tied
to editing commands.

* MiniBrowser/mac/MainMenu.xib:

LayoutTests:

* fast/css/viewport-units-zoom-expected.html: Added.
* fast/css/viewport-units-zoom.html: Added.


Canonical link: https://commits.webkit.org/196138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225277 268f45cc-cd09-0410-ab3c-d52691b4dbfc